added MultiAutoCompleteTextView for tagging OSC sdlc phases

--- a/OscTracker/res/layout/list_item.xml
+++ b/OscTracker/res/layout/list_item.xml
@@ -1,19 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
-    
-    <TextView android:id="@+id/timeView"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"
-		android:textSize="18sp"
-		android:paddingRight="5dp" />
-    
+    android:orientation="vertical" >
+  
 	<TextView android:id="@+id/notesView"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:textSize="12sp"
+		android:textSize="18sp"
 		android:textIsSelectable="true" />
+	    
+    <TextView android:id="@+id/timeView"
+		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:textSize="12sp"
+		android:paddingRight="5dp"
+		android:color="@color/date_color" />
 	
 </LinearLayout>
