--- a/OscTracker/res/layout/list_item.xml
+++ b/OscTracker/res/layout/list_item.xml
@@ -1,17 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
   
 	<TextView android:id="@+id/notesView"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
 		android:textSize="18sp"
 		android:textIsSelectable="true" />
 	    
     <TextView android:id="@+id/timeView"
-		android:layout_width="wrap_content"
-		android:layout_height="match_parent"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
 		android:textSize="12sp"
 		android:paddingRight="5dp"
 		android:color="@color/date_color" />
