--- a/OscTracker/res/layout/list_item.xml
+++ b/OscTracker/res/layout/list_item.xml
@@ -1,16 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="?android:attr/activatedBackgroundIndicator"
+    android:padding="10dp" >
   
 	<TextView android:id="@+id/notesView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:textSize="16sp" />
+		android:textSize="16sp"
+		android:textColor="#000000" />
 	    
     <TextView android:id="@+id/timeView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:textSize="16sp" />
+		android:textSize="12sp"
+		android:textColor="#000000" />
 	
 </LinearLayout>
