--- a/OscTracker/res/menu/main.xml
+++ b/OscTracker/res/menu/main.xml
@@ -5,5 +5,12 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item
+		android:id="@+id/main_menu_export"
+		android:showAsAction="ifRoom"
+		android:title="@string/main_menu_export" >
+    </item>
+
 
 </menu>
