--- a/OscTracker/res/values/colors.xml
+++ b/OscTracker/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<color name="date_color">#F25618</color>
+	<color name="gray">#ff888888</color>
+	<color name="blue">#ff0000ff</color>
+	<color name="green">#ff00ff00</color>
 </resources>
